crates/llvmkit-ir/tests/compile_fail/vec_binop_length_mismatch.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/vec_binop_length_mismatch.rs:28:44
   |
28 |         let _bad = b.build_vec_int_add(a4, a2, "x").unwrap(); //~ ERROR mismatched types
   |                      -----------------     ^^ expected `4`, found `2`
   |                      |
   |                      arguments to this method are incorrect
   |
   = note: expected struct `VectorValue<'_, i32, Len<4>, Brand<'_>>`
              found struct `VectorValue<'_, i32, Len<2>, Brand<'_>>`
note: method defined here
  --> src/ir_builder.rs
   |
   |     pub fn build_vec_int_add<E, L, Name>(
   |            ^^^^^^^^^^^^^^^^^
